v3.4.9 (XXXX-XX-XX)
-------------------

* The graph viewer of the web interface now tries to find a vertex document of
  all available vertex collections before it aborts.
  
* Bugfix: Save distinct WAL ticks for multiple replication clients from the same
  server. Also, when a follower is added for synchronous replication, the WAL
  tick held by the client is freed immediately, rather than waiting for a
  timeout.

  The corresponding APIs get a new parameter `syncerId`, which, if given,
  supersedes `serverId`. This affects the routes /_api/wal/tail,
  /_api/replication/batch, /_api/replication/logger-follow and the internal
  route /_api/replication/addFollower. The new field `syncerId` is also added to
  the response of /_api/replication/logger-state.


v3.4.8 (2019-09-09)
-------------------

* Drop collection action to timeout more quickly to stay on fast lane.

* Fixed non-deterministic occurrences of "document not found" errors in sharded 
  collections with custom shard keys (i.e. non-`_key`) and multi-document lookups.

* Fixed issue #9798: limit with offset results in an infinite query that can't be
  cancelled.

* Agents to remove callback entries when responded to with code 404.

* Make minimum timeout for synchronous replication configurable via parameter
  (--cluster.synchronous-replication-timeout-minimum) and increase default value
  to prevent dropping followers unnecessarily.

* Fixed issue #9795: fix AQL `NOT IN` clause in SEARCH operations for ArangoSearch
  views.

* Don't retry persisting follower information for collections/shards already
  dropped. The previous implementation retried (unsuccessfully in this case)
  for up to 2 hours, occupying one scheduler thread.

* Show query string length and cacheability information in query explain output.

* Fixed internal issue #4378: fix bug in MoveShard::abort which causes a
  duplicate entry in the follower list.

* Fixed issue #9654: honor value of `--rocksdb.max-write-buffer-number` if it