@@ -1,6 +1,8 @@
 v3.4.9 (XXXX-XX-XX)
 -------------------
 
+* Fixed adding an orphan collections as the first collection in a SmartGraph.
+
 * The graph viewer of the web interface now tries to find a vertex document of
   all available vertex collections before it aborts.
   
